--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.5.4</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
